# pyranges

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.txt  an-introduction-to-rles.html  applying-custom-methods-to-pairs-of-pyranges.html  bandit.yml  build.yaml  build_wheels.sh  concatenating-pyranges.html  create-count-matrix-from-multiple-pyranges.html  deleteme.txt  environment.yml  fetching-gene-tracks-as-pyranges.html  finding-the-closest-intervals.html  finding-the-k-closest-intervals.html  genomicfeatures-methods-using-genomic-context.html  hi  index.html  intersecting-ranges.html  iterating-over-pyranges.html  joining-ranges.html  loadingcreating-pyranges.html  manipulating-the-data-in-pyranges.html  methods-for-manipulating-single-pyranges.html  overlapping-ranges.html  piping-pyranges.html  printing-pyranges.html  pyproject.toml  readthedocs.yml  requirements.txt  run-length-encoding-dicts.html  search_index.json  (+16 more)
.github/workflows/: build-book.yml  build_and_upload_wheels.yml  install_doctest_lint_typecheck.yml  python-package-conda.yml  run_hypothesis_tests.yml
book/: _bookdown.yml  build_book.yml  compile.R  creating.Rmd  custom_methods.Rmd  databases.Rmd  exons.py  fisher_exact.Rmd  genomicfeatures.Rmd  index.Rmd  insert.Rmd  iterate.Rmd  join.Rmd  knearest.Rmd  make_book.py  manipulation.Rmd  piping.Rmd  pyranges.css  reldist.Rmd  runlength_dict.Rmd  runlengths.ipynb  single_range_methods.Rmd  sort.Rmd  subset.Rmd  subsetting_rles.Rmd  summary.Rmd  tutorial.Rmd  writing.Rmd
build_docs/: test.bed
docs/: ._index.html  ._piping-pyranges.html  ._turning-ranges-into-rles.html  .buildinfo  Makefile  _bookdown.yml  _iframe.html  _index.rst.html  an-introduction-to-rles.html  aorta.csv  aorta.gtf  applying-custom-methods-to-pairs-of-pyranges.html  colocalization.Rmd  compile.R  compile2.R  concat.Rmd  concatenating-pyranges.html  conf.py  count_overlaps.Rmd  coverage.Rmd  create-count-matrix-from-multiple-pyranges.html  creating.Rmd  custom_methods.Rmd  databases.Rmd  developer_guide.rst  fetching-gene-tracks-as-pyranges.html  finding-the-closest-intervals.html  finding-the-k-closest-intervals.html  fisher_exact.Rmd  genindex.html  genomicfeatures-methods-using-genomic-context.html  genomicfeatures.Rmd  how_to_book.rst  how_to_pages.rst  index.Rmd  index.html  index.rst  insert.Rmd  inserting-columns-based-on-overlap.html  installation.rst  (+72 more)
docs/_static/: basic.css  (+1 more)
docsrc/: Makefile
example_data/: chipseq.bed
examples/: intersection.py
pyranges/: __init__.py  data.py  db.py  genomicfeatures.py  get_fasta.py  guessers.py  helpers.py  methods.py  multioverlap.py  multithreaded.py  ncls.py  out.py  pyranges.py  pyranges_main.py  ray.py  raymock.py  readers.py  sandbox.py  statistics.py  stats.py  subset.py  tostring.py  tostring2.py  version.py
pyranges-0.0.14/: setup.py
src/: intervaltree.pyx
tests/: .fuse_hidden0000017200000002  chip_10.bed  chip_10_plus_one.bed  compute_Rle.R  compute_coverage.R  conftest.py  f1.bed  failures.out  helpers.py  hypothesis_helper.py  i1.txt  i2.txt  input_10.bed  k_nearest.py  run.py  statistics.py  test_GRles.py  test_add.py  test_advanced_intersection.py  test_advanced_overlap.py  test_advanced_overlap_keep_both.py  test_advanced_subtraction.py  test_bed_intersection.py  test_binary.py  test_both_indexes.py  test_change_chromosome_custom.py  test_cluster.py  test_compute_rle.R  test_concat.py  test_count_overlaps.py  test_coverage.py  test_div.py  test_do_not_error.py  test_genomicfeatures.py  test_getset_attr.py  test_guessers.py  test_how_to_book.py  test_how_to_pages.py  test_hypothesis.py  test_instantiation.py  (+31 more)
(+270 files in other folders)
